# nasa_space_apps_challenge_2024_seismic_detection

./: LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 1_processing_nasa_data.ipynb  2_fine_tunning.ipynb  3_19_visualize.ipynb  4_inference.ipynb
src/nasa_space_apps_challenge_2024_seismic_detection/: __init__.py
src/nasa_space_apps_challenge_2024_seismic_detection/dataset/: __init__.py  categories.py  dataset.py  seismic_record.py
src/nasa_space_apps_challenge_2024_seismic_detection/models/: __init__.py  moment_trainer.py
