[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nasa_space_apps_challenge_2024_seismic_detection"
version = "0.0.1"
description = "NASA Space Apps Challenge 2024 -- Seismic Detection Across the Solar System (https://www.spaceappschallenge.org/nasa-space-apps-2024/challenges/seismic-detection-across-the-solar-system/)"
authors = [
  { name = "hyzhak" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nasa_space_apps_challenge_2024_seismic_detection"]
force_sort_within_sections = true
